fix(css): group tools no longer push out of the page on mobile

--- a/views/default/activity.css
+++ b/views/default/activity.css
@@ -163,4 +163,5 @@
 
 #groups-tools {
 	margin: 1rem 0;
+	grid-template-columns: 1fr;
 }
